# html2ppt

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agenttodo  docker-compose.yml  main.py  pyproject.toml  slidev-parser-0.2.13.tgz
frontend/: .dockerignore  DEPRECATED.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  VuePreview.tsx
frontend/src/pages/: GeneratingPage.tsx  HomePage.tsx  OutlinePage.tsx  ResultPage.tsx  SettingsPage.tsx
nginx/: Dockerfile  nginx.conf
openspec/changes/add-outline-to-slidev-agent/: design.md  proposal.md  tasks.md
openspec/changes/add-outline-to-slidev-agent/specs/generation-orchestration/: spec.md
openspec/changes/add-outline-to-slidev-agent/specs/outline-generation/: spec.md
openspec/changes/add-outline-to-slidev-agent/specs/react-generation/: spec.md
openspec/changes/add-outline-to-slidev-agent/specs/slidev-conversion/: spec.md
openspec/changes/add-outline-to-slidev-agent/specs/vue-generation/: spec.md
openspec/changes/migrate-frontend-to-streamlit/: design.md  proposal.md  tasks.md
src/html2ppt/: __init__.py  cli.py
src/html2ppt/agents/: __init__.py  design_director.py  fit_scale.py  llm_factory.py  pagination.py  prompts.py  reflection_reviewer.py  research.py  session_manager.py  state.py  validators.py  visual_reviewer.py  workflow.py
src/html2ppt/api/: __init__.py  app.py
src/html2ppt/api/routes/: health.py  sessions.py  settings.py
src/html2ppt/config/: __init__.py  llm.py  logging.py  reflection.py  runtime_overrides.py  settings.py
src/html2ppt/services/: __init__.py  renderer.py
stitch_optimized_workspace_layout/: code.html
streamlit_app/: Dockerfile  api_client.py  app.py
streamlit_app/pages/: 1_🏠_首页.py  2_📝_大纲编辑.py  3_⏳_生成中.py  4_🎉_结果.py  5_⚙️_设置.py
tests/: test_pagination.py  test_validators.py  test_visual_reviewer.py
vue-preview-service/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
vue-preview-service/src/: VuePreview.ts  main.ts  unocss-browser.ts
web/: .dockerignore  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  uno.config.ts
web/assets/styles/: main.css
web/components/: AppHeader.vue  ChatComposer.vue  ChatThread.vue  CodeViewer.vue  CommandBar.vue  OutlineEditor.vue  PreviewStage.vue  SideNav.vue  StepTimeline.vue  WorkspaceProgress.vue
web/composables/: useApi.ts
web/layouts/: default.vue
web/pages/: history.vue  index.vue  settings.vue
web/stores/: session.ts  settings.ts
web/utils/: encoding.ts
(+2 files in other folders)
