[project]
name = "html2ppt"
version = "0.1.0"
description = "AI-powered presentation generator: from requirements to Slidev PPT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # LangChain & LangGraph
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",

    # Data validation & Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Async & HTTP
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "rich>=13.9.0",

    # Streamlit Frontend
    "streamlit>=1.28.0",
    "streamlit-ace>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
html2ppt = "html2ppt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/html2ppt"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
